<resources>
    <string name="app_name">CE-1257218</string>
    <string name="description">Відкритий люк (біля рекламного щита), раайон повороту трамваїв 18 та 19 на проспект Миру з Донецького шосе</string>
    <string name="head">Комунальне господарство</string>
    <string name="state">В роботі</string>
    <string name="created_title">Створено</string>
    <string name="registered_title">Зареєстровано</string>
    <string name="deadline_title">Вирішити до</string>
    <string name="responsible_title">Відповідальний</string>
    <string name="created_date">25 лютого 2016</string>
    <string name="registered_date">26 лютого 2016</string>
    <string name="deadline_date">29 лютого 2016</string>
    <string name="responsible_name">Дніпропетровський МВК()</string>
    <string-array name="urlArray">
        <item>https://d-a.d-cd.net/62604du-960.jpg</item>
        <item>http://www.realnest.com.ua/images/4882.jpg</item>
    </string-array>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="all_questions">Всі звернення</string>
    <string name="map_questions">Звернення на мапі</string>
    <string name="enter_ac">Увійти в акаунт</string>
    <string name="e_con">e-contact</string>
    <string name="in_process">В роботі</string>
    <string name="ended">Виконано</string>
    <string name="waiting">Очікує</string>
    <string name="nav_footer_1">Зроблено з любов\'ю</string>
    <string name="nav_footer_2">IT Ruh Dnipro та Yalantis</string>


</resources>
