<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.main.MainActivity">
    <include
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/task_head"
                android:text="@string/head"
                style="@style/MainTextTheme"
                android:layout_marginTop="0dp"
                android:textSize="@dimen/big_text_size"
                android:onClick="onViewClick"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:showDividers="middle"
                android:divider="@drawable/divider"
                android:baselineAligned="false">
                <TextView
                    android:text="@string/state"
                    style="@style/MainTextTheme"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="@dimen/text_top_margin"
                    android:background="@drawable/in_process_shape"
                    android:onClick="onViewClick"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_top_margin">

                    <TextView
                        android:text="@string/created_title"
                        style="@style/LeftTextTheme"
                        android:onClick="onViewClick"/>

                    <TextView
                        android:id="@+id/created_date"
                        android:text="@string/created_date"
                        style="@style/RightTextTheme"
                        android:onClick="onViewClick"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_top_margin">
                    <TextView
                        android:text="@string/registered_title"
                        style="@style/LeftTextTheme"
                        android:onClick="onViewClick"/>
                    <TextView
                        android:id="@+id/registered_date"
                        android:text="@string/registered_date"
                        style="@style/RightTextTheme"
                        android:onClick="onViewClick"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_top_margin">
                    <TextView
                        android:text="@string/deadline_title"
                        style="@style/LeftTextTheme"
                        android:onClick="onViewClick"/>
                    <TextView
                        android:id="@+id/deadline_date"
                        android:text="@string/deadline_date"
                        style="@style/RightTextTheme"
                        android:onClick="onViewClick"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_top_margin">

                <TextView
                        android:text="@string/responsible_title"
                        style="@style/LeftTextTheme"
                        android:onClick="onViewClick"/>
                    <TextView
                        android:id="@+id/responsible"
                        android:text="@string/responsible_name"
                        style="@style/RightTextTheme"
                        android:onClick="onViewClick"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/descriprion"
                    android:text="@string/description"
                    style="@style/MainTextTheme"
                    android:layout_marginTop="@dimen/text_top_margin"
                android:onClick="onViewClick"/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/image_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rv_height"
                android:layout_marginTop="10dp"
                android:scrollbars="horizontal"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
